...
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:weightSum="1"
                >

                <EditText
                    android:id="@+id/edittext_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:hint="@string/title_search"
                    android:lines="1"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:backgroundTint="@android:color/transparent"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
...
